--- a/7.0/alpine/Dockerfile
+++ b/7.0/alpine/Dockerfile
@@ -1,7 +1,13 @@
 FROM php:7.0-alpine
-MAINTAINER MilesChou <jangconan@gmail.com>
+MAINTAINER gabel <gabeldeluxe@gmail.com>
 
-ENV PHALCON_VERSION=3.0.2
+ENV PHALCON_VERSION=3.0.3
+
+ENV TIMEZONE            UTC
+ENV PHP_MEMORY_LIMIT    512M
+ENV MAX_UPLOAD          50M
+ENV PHP_MAX_FILE_UPLOAD 200
+ENV PHP_MAX_POST        100M
 
 # Compile Phalcon
 RUN set -xe && \
@@ -17,3 +23,8 @@ RUN set -xe && \
         tar xzf v${PHALCON_VERSION}.tar.gz && \
         mv phalcon-devtools-${PHALCON_VERSION} /usr/local/phalcon-devtools && \
         ln -s /usr/local/phalcon-devtools/phalcon.php /usr/local/bin/phalcon
+
+RUN apk add --no-cache \
+        php7-apcu \
+        php7-intl \
+        php7-mongodb
