--- a/7.0/fpm/config/zz_docker.ini
+++ b/7.0/fpm/config/zz_docker.ini
@@ -1,3 +1,5 @@
+; zz_docker.ini - naming with "zz" prefix to assure that is loaded last
+
 ; General settings
 
 date.timezone = "UTC"
@@ -13,7 +15,14 @@ error_log = /var/log/php-app/error.log
 ; Opcache settings (best on https://www.scalingphpbook.com/best-zend-opcache-settings-tuning-config/)
 
 opcache.revalidate_freq = 0
+opcache.validate_timestamps=0
 opcache.max_accelerated_files = 7963
 opcache.memory_consumption = 96
 opcache.interned_strings_buffer = 16
 opcache.fast_shutdown = 1
+
+; FPM settings
+pm = ondemand
+pm.max_children = 150
+pm.process_idle_timeout = 10s
+pm.max_requests = 1000
