fix fpm logging

--- a/7.0/fpm/config/zz_docker.ini
+++ b/7.0/fpm/config/zz_docker.ini
@@ -9,8 +9,9 @@ date.timezone = "UTC"
 display_errors = Off
 display_startup_errors = Off
 error_reporting = E_ALL
+
+; Only log to /proc/self/df/2 as long as https://github.com/php/php-src/pull/2310 is not fixed
 log_errors = On
-error_log = /var/log/php-app/error.log
 
 ; Opcache settings (best on https://www.scalingphpbook.com/best-zend-opcache-settings-tuning-config/)
 
@@ -23,6 +24,6 @@ opcache.fast_shutdown = 1
 
 ; FPM settings
 pm = ondemand
-pm.max_children = 150
+pm.max_children = 75
 pm.process_idle_timeout = 10s
-pm.max_requests = 1000
+pm.max_requests = 500
